# distributed-transformer

./: .gitignore  README.md  generate.py  plot_benchmarks.py  pyproject.toml  requirements.txt  summarize_benchmarks.py  tokenizer.py  train.py
models/: __init__.py  kv_cache.py  multi_head_attention.py  self_attention.py  transformer.py
results/memory_study/: ddp-2gpu.jsonl  fsdp-2gpu-activation-checkpointing.jsonl  single-gpu.jsonl
results/tinyshakespeare/: ddp-2gpu.jsonl  fsdp-2gpu-activation-checkpointing.jsonl  single-gpu.jsonl
scripts/: run_memory_study.sh  run_tinyshakespeare_suite.sh
